# vorte-framework

./: pyproject.toml
.github/workflows/: publish.yml
tests/: benchmark_serde.py  test_auto_query_planner.py  test_kernel_evolution.py  test_performance_mode.py  test_queue.py  test_scheduler.py  test_serde_dynamic.py  test_serializer.py  test_streaming_sse.py
vorte/: __init__.py
vorte-demo-real/: test_streaming.py
vorte-demo-real/my_app/: .gitignore  compare_modes.py  get_error.py  init_pg.py  load_test.py  main.py  recreate_db.py  requirements.txt  run_massive_benchmark.py  seed_real.py  test_db.py  test_direct.py  test_http.py  vorte_dev.db
vorte-demo-real/my_app/migrations/: alembic.ini  env.py
vorte-engine/: Cargo.toml
vorte-engine/crates/vorte-core/src/: connection.rs  pipeline.rs
vorte-engine/crates/vorte-graph/: Cargo.toml
vorte-engine/crates/vorte-graph/src/: lib.rs
vorte-engine/crates/vorte-py/: Cargo.toml
vorte-engine/crates/vorte-py/src/: bridge.rs  engine.rs  executor.rs  graph.rs  handler.rs  lib.rs  metrics.rs  native_queue.rs  native_serde.rs  scheduler.rs
vorte-engine/crates/vorte-queue/: Cargo.toml
vorte-engine/crates/vorte-queue/src/: backpressure.rs  engine.rs  job.rs  lib.rs  redis_backend.rs
vorte-engine/crates/vorte-scheduler/: Cargo.toml
vorte-engine/crates/vorte-scheduler/src/: lib.rs  stats.rs  task.rs  worker.rs
vorte-engine/crates/vorte-serde/: Cargo.toml
vorte-engine/crates/vorte-serde/src/: lib.rs
vorte/core/: app.py  concurrency.py  executor.py  response.py  router.py  serializer.py  tracing.py
vorte/modules/database/: __init__.py  connection.py  module.py  performance.py  planner.py  query.py
vorte/modules/queue/: job.py  module.py  queue.py  worker.py
