[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "vorte-engine/crates/vorte-py/Cargo.toml"
python-source = "."
module-name = "vorte._vorte_engine"
include = ["LICENSE"]

[project]
name = "vorte"
version = "1.1.0"
description = "The AI-First Python API Framework. Fast, intelligent, and modular."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Vorte Framework", email = "hello@vorte.dev"},
]
maintainers = [
    {name = "Vorte Framework", email = "hello@vorte.dev"},
]
keywords = [
    "api", "framework", "ai", "fastapi", "async", "python",
    "openai", "anthropic", "gemini", "sqlalchemy", "redis",
    "mpesa", "websocket", "graphql", "pydantic", "rust",
    "uvicorn", "orm", "dashboard", "agents", "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "httpx>=0.28.0",
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "alembic>=1.14.0",
    "cryptography>=44.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.10.0",
]

[project.urls]
Homepage = "https://pypi.org/project/vorte/"
Documentation = "https://github.com/vortemain/vorte-framework/tree/main/docs"
Repository = "https://github.com/vortemain/vorte-framework"
Issues = "https://github.com/vortemain/vorte-framework/issues"
Changelog = "https://github.com/vortemain/vorte-framework/blob/main/CHANGELOG.md"

[project.optional-dependencies]
full = [
    "vorte[ai]",
    "vorte[mpesa]",
    "vorte[payments]",
    "vorte[search]",
    "vorte[storage]",
]
ai = [
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]
mpesa = []
payments = ["stripe>=11.0.0"]
search = ["meilisearch>=0.31.0"]
storage = ["boto3>=1.35.0"]
sandbox = ["wasmtime>=25.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
vorte = "vorte.cli.main:cli"

[tool.setuptools.packages.find]
include = ["vorte*"]

[tool.setuptools.package-data]
"vorte.modules.dashboard" = ["static/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
