[workspace]
resolver = "2"
members = [
    "crates/vorte-http",
    "crates/vorte-router",
    "crates/vorte-core",
    "crates/vorte-scheduler",
    "crates/vorte-queue",
    "crates/vorte-serde",
    "crates/vorte-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vorte-framework/vorte-engine"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1.1"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.9"
pyo3 = { version = "0.22", features = ["extension-module"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
parking_lot = "0.12"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rustls = "0.23"
smallvec = "1.13"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
rmp-serde = "1"
ciborium = "0.2"
prost = "0.13"
prost-types = "0.13"
tokio-tungstenite = { version = "0.24", features = ["handshake"] }
futures-util = "0.3"
