[package]
name = "vorte-queue"
description = "High-performance async-native queue engine with priority, crossbeam channels, backpressure, dead-letter, and optional Redis STREAM backend"
version.workspace = true
edition.workspace = true

[dependencies]
tracing            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
crossbeam-channel  = { workspace = true }

[dependencies.redis]
workspace = true
optional  = true

[features]
default       = []
redis-backend = ["dep:redis"]
