[package]
name = "vorte-serde"
description = "Multi-format serialization engine with buffer pooling for VORTE"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
ciborium = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
